--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -25,7 +25,7 @@
 
 \overfullrule 5pt
 
-\doublespacing
+%\doublespacing
 
 \usepackage{lipsum}
 
@@ -62,7 +62,7 @@
 
 \noindent \textbf{Email Address}: jphill01@uoguelph.ca
 
-\noindent \textbf{Running Title}: 
+\noindent \textbf{Running Title}: Bayesian inference for DNA barcoding
 
 \newpage
 
@@ -94,7 +94,7 @@ p'_x &= \frac{\#\{d_{ij} \geq a'\}}{\#\{d_{ij}\}} \\[1mm]
 q'_x &= \frac{\#\{d'_{XY} \leq b\}}{\#\{d'_{XY}\}}
 \end{align}
 
-\noindent where $d_{ij}$ are pairwise genetic distances within species and $d_{XY}$ are genetic distances among species for an entire genus of concern. The notation \# reflects a count (\textbf{Figure 1}).  Quantities $a$ and $b$ correspond to min($d_{XY}$) and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Hence, Equations (1)-(4) are simply empirical means of genetic distances falling below or exceeding given distribution thresholds. Notice further that $a$ and $b$ are also the first and $n$th order statistics, respectively. Distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. Similar expressions (denoted $p^{'}_x$ and $q^{'}_x$) for nearest neighbour species were also given (see \cite{phillips2024measure}), in which $d_{XY}$ included only interspecific distances between the species of interest and its closest neighbouring species. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences. such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed interval // [0, 1]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the \\ presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. Equations (1)-(4) can be expressed in terms of empirical cumulative distribution functions (ECDFs) as follows
+\noindent where $d_{ij}$ are pairwise genetic distances within species, $d_{XY}$ are genetic distances among species for an entire genus of concern, and $d'_{XY}$ are combined interspecific distances for a target species and its closest neighbouring species. The notation \# reflects a count (\textbf{Figure 1}).  Quantities $a$, $a'$, and $b$ correspond to min($d_{XY}$), min($d'_{XY}$), and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Hence, Equations (1)-(4) are simply empirical means of genetic distances falling below or exceeding given distribution thresholds. Notice further that $a$/$a'$, and $b$ are also the first and $n$th order statistics, respectively. Genetic distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences, such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed unit interval [0, 1]. Values of the estimators obtained from equations (1)-(4) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the \\ presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. Equations (1)-(4) can be expressed in terms of empirical cumulative distribution functions (ECDFs) as follows, since the true underlying CDFs, $F(\cdot)$, are unknown
 
 \begin{align}
 p_x &= \mathbb{P}(d_{ij} \geq a) \hspace{2.5mm} = 1 - \hat{F}_{d_{ij}}(a) = \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a)  \\
@@ -103,7 +103,7 @@ p'_x &= \mathbb{P}(d_{ij} \geq a') \hspace{2.5mm} = 1 - \hat{F}_{d_{ij}}(a') = \
 q'_x &= \mathbb{P}(d'_{XY} \leq b) = \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent noting that $\hat{F}_{d_{ij}}(b) = 1$, $\hat{F}_{d_{XY}}(a) = 0$, and $\hat{F}_{d'_{XY}}(a') = 0$ (\textbf{Figure 1}). Given $n$ \\ increasing-ordered data points, the ECDF $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$ comprises a step function having jump discontinuities of $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties, where $\mathds{1}(x)$ is the indicator function. From here, the asymmetric directionality of the metrics is obvious. 
+\noindent noting that $\hat{F}_{d_{ij}}(b) = 1$, $\hat{F}_{d_{XY}}(a) = 0$, and $\hat{F}_{d'_{XY}}(a') = 0$ (\textbf{Figure 1}). Given $n$ \\ increasing-ordered data points, the ECDF $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$ comprises a step function having jump discontinuities of $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. From here, the asymmetric directionality of the metrics is obvious. 
 
 
 \subsection{A Bayesian Implementation}
@@ -118,7 +118,7 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 
 \subsection{The Model}
 
-Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. Here, it is sought to numerically approximate the extent of \\ overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1)-(4)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise species comparisons. The quantity \\ $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
+Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. Here, it is sought to numerically approximate the extent of \\ overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. The usual approach employs Kernel Density Estimation (KDE), along with numerical integration; however, this requires careful selection of the bandwidth parameter. Here, for simplicity, a different route is taken. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1)-(4)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise species comparisons. The quantity $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
 
 \begin{align}
 \notag y_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p_\mathrm{lwr}) \\ 
@@ -158,7 +158,7 @@ The proposed Bayesian model outlined herein has a straightforward interpretation
 
 \vspace{1mm}
 
-\item sWhen  $p^{'}_\mathrm{lwr}$ is close to 1, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on averqge, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap;
+\item When  $p^{'}_\mathrm{lwr}$ is close to 1, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on averqge, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap;
 
 \vspace{1mm}
 
