--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -103,7 +103,7 @@ p'_x &= \mathbb{P}(d_{ij} \geq a') \hspace{2.5mm} = 1 - \hat{F}_{d_{ij}}(a') = \
 q'_x &= \mathbb{P}(d'_{XY} \leq b) = \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent noting that $\hat{F}_{d_{ij}}(b) = 1$, $\hat{F}_{d_{XY}}(a) = 0$, and $\hat{F}_{d'_{XY}}(a') = 0$ (\textbf{Figure 1}). Given $n$ \\ increasing-ordered data points, the ECDF $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$ comprises a step function having jump discontinuities of $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. From here, the asymmetric directionality of the metrics is obvious. 
+\noindent noting that $\hat{F}_{d_{ij}}(b) = 1$, $\hat{F}_{d_{XY}}(a) = 0$, and $\hat{F}_{d'_{XY}}(a') = 0$ (\textbf{Figure 1}). Given $n$ \\ increasing-ordered data points, the ECDF $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$ comprises a step function having jump discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. From here, the asymmetric directionality of the metrics is obvious. 
 
 
 \subsection{A Bayesian Implementation}
@@ -114,7 +114,7 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 \widehat{SE[\hat{p}}] = \sqrt{\frac{\hat{p}(1 - \hat{p})}{n}},
 \end{equation}
 
-\noindent where $\hat{p} = \frac{Y}{n}$ is the MLE, $Y$ is the number of successes ($Y = \sum_{i=1}^n{y_i}$) and $n$ is the number of trials (\textit{i.e.}, sample size). However, the above formula is problematic for several reasons. First, Equation (9) makes use of the Central Limit Theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proprtions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering Equation (9) completely useless. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. Bayesian inference offers a natural path forward in this regard since it allows for straightforward specification of prior beliefs concerning unknown model parameters and permits the seamless propagation of uncertainty, when data is lacking, through integration with the likelihood function associated with true generating processes. As a consequence, Bayesian models are much more flexible and generally more easily interpretable compared to frequentist approaches since, under the latter paradigm, entire posterior distributions, along with their summaries, are outputted, rather than just sampling distributions, p-values, and confidence intervals as in the former case, thus allowing direct probability statements to be made. 
+\noindent where $\hat{p} = \frac{Y}{n}$ is the MLE, $Y$ is the number of successes ($Y = \sum_{i=1}^n{y_i}$) and $n$ is the number of trials (\textit{i.e.}, sample size). However, the above formula is problematic for several reasons. First, Equation (9) makes use of the Central Limit Theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proprtions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering Equation (9) completely useless. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. Bayesian inference offers a natural path forward in this regard since it allows for straightforward specification of prior beliefs concerning unknown model parameters and permits the seamless propagation of uncertainty, when data is lacking, through integration with the likelihood function associated with true generating processes. As a consequence, because parameters are treated as random variables, Bayesian models are much more flexible and generally more easily interpretable compared to frequentist approaches since, under the latter paradigm, entire posterior distributions, along with their summaries, are outputted, rather than just sampling distributions, p-values, and confidence intervals as in the former case, thus allowing direct probability statements to be made. 
 
 \subsection{The Model}
 
@@ -135,42 +135,7 @@ To validate the overall correctness of the proposed statistical model given by \
 
 \subsection{Model Interpretation}
 
-The proposed Bayesian model outlined herein has a straightforward interpretation:
-
-\begin{itemize}
-\item When $p_{lwr}$ is close to 0, it suggests that the probability of intraspecific distances being larger than interspecific distances is low on averqge, while the probability of interspecific distances being larger than intraspecific distances is high on average; that is, there is evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When $p_{lwr}$ is close to 1, it suggests that the probability of intraspecific distances being larger than interspecific distances is high on averqge, while the probability of interspecific distances being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When $p_{upr}$ is close to 0, it suggests that the probability of interspecific distances being larger than intraspecific distances is high on average, while the probability of intraspecific distances being larger than interspecific distances is low on average; that is, there is evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When $p_{upr}$ is close to 1, it suggests that the probability of interspecific distances being larger than intraspecific distances is low on average, while the probability of intraspecific distances being larger than interspecific distances is high on average; that is, there is no evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When $p^{'}_\mathrm{lwr}$ is close to 0, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is low on averqge, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is high on average; that is, there is evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When  $p^{'}_\mathrm{lwr}$ is close to 1, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on averqge, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap;
-
-\vspace{1mm}
-
-\item When $p^{'}_\mathrm{upsr}$ is close to 0, it suggests that the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is high on averqge, while the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is low on average; that is, there is evidence for a DNA barcode gap; and,
-
-\vspace{1mm}
-
-\item When $p^{'}_\mathrm{upr}$ is close to 1, it indicates that the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average, while the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on average; that is, there is no evidence for a DNA barcode gap.
-
-\end{itemize}
-
-Framed more succinctly, 
+The proposed Bayesian model outlined herein has a straightforward interpretation \\ (\textbf{Table 1}). Framed more succinctly, 
 
 \begin{itemize}
 
@@ -231,7 +196,7 @@ JDP wrote the manuscript, wrote R and Stan code, approved all developed code as 
 \bibliographystyle{humannat}
 \bibliography{References}
 
-\section*{Figures}
+\section*{Figures and Tables}
 
 \begin{figure}[H]
 
@@ -242,6 +207,33 @@ JDP wrote the manuscript, wrote R and Stan code, approved all developed code as 
 \caption{Modified depiction from \citet{meyer2005dna} and \citet{phillips2024measure} of the overlap/separation of pairwise intraspecific and interspecific genetic distances ($\delta$) for calculation of the DNA barcode gap metrics ($p_x$ and $q_x$) for a hypothetical species $x$. The minimum interspecific distance is denoted by $a$ and the maximum intraspecific distance is indicated by $b$. The quantity $f(\delta)$ is akin to a kernel density estimate of the probability density function of pairwise genetic distances. A similar visualization can be displayed for $p^{'}_x$ and $q^{'}_x$.}
 
 \end{figure}
+
+
+
+\begin{table}[htbp]
+    \centering
+    \small
+    \caption{Explanation of Model Interpretation}
+    \label{tab:parameters}
+    \begin{tabular}{cp{0.7\linewidth}}
+    \hline
+    \textbf{Parameter} & \textbf{Explanation} \\
+    \hline
+    $p_{\text{lwr}}$ & When $p_{\text{lwr}}$ is close to 0, it suggests that the probability of intraspecific distances being larger than interspecific distances is low on average, while the probability of interspecific distances being larger than intraspecific distances is high on average; that is, there is evidence for a DNA barcode gap.\\
+    & When $p_{\text{lwr}}$ is close to 1, it suggests that the probability of intraspecific distances being larger than interspecific distances is high on average, while the probability of interspecific distances being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap.\\
+        & \\[-2mm]
+    $p_{\text{upr}}$ & When $p_{\text{upr}}$ is close to 0, it suggests that the probability of interspecific distances being larger than intraspecific distances is high on average, while the probability of intraspecific distances being larger than interspecific distances is low on average; that is, there is evidence for a DNA barcode gap.\\
+    & When $p_{\text{upr}}$ is close to 1, it suggests that the probability of interspecific distances being larger than intraspecific distances is low on average, while the probability of intraspecific distances being larger than interspecific distances is high on average; that is, there is no evidence for a DNA barcode gap.\\
+        & \\[-2mm]
+    $p^{'}_{\text{lwr}}$ & When $p^{'}_{\text{lwr}}$ is close to 0, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is low on average, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is high on average; that is, there is evidence for a DNA barcode gap.\\
+    & When $p^{'}_{\text{lwr}}$ is close to 1, it suggests that the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on average, while the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average; that is, there is no evidence for a DNA barcode gap.\\
+        & \\[-2mm]
+    $p^{'}_{\text{upr}}$ & When $p^{'}_{\text{upr}}$ is close to 0, it suggests that the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is high on average, while the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is low on average; that is, there is evidence for a DNA barcode gap.\\
+    & When $p^{'}_{\text{upr}}$ is close to 1, it indicates that the probability of combined interspecific distances for a target species and its nearest neighbour species being larger than intraspecific distances is low on average, while the probability of intraspecific distances being larger than combined interspecific distances for a target species and its nearest neighbour species is high on average; that is, there is no evidence for a DNA barcode gap.\\
+    \hline
+    \end{tabular}
+\end{table}
+
 
 
 \end{document}
